--- a/index.html
+++ b/index.html
@@ -30,30 +30,30 @@
                                                     <table align="center" cellspacing="0" cellpadding="0" border="0" style="border-collapse: collapse;border-spacing: 0;border: 0; margin:0; padding:0; min-width:1024px;">
                                                         <tbody>
                                                             <tr align="left" style="border-collapse: collapse;border-spacing: 0;border: 0; background-color:#fff;">
-                                                                <td align="left" valign="middle" style="width:1024px; height:1234px; background-color:#fff;">
-                                                                    <img style="background-color:#fff;" border="0" height="1234" src="images/1_01.jpg" style="line-height:0; border:0; width:1024px; max-width:1024px; min-width:1024px; height:1234px; max-height:1234px; min-height:1234px;" width="1024">
+                                                                <td align="left" valign="middle" style="width:1024px; height:1233px; background-color:#fff;">
+                                                                    <img style="background-color:#fff;" border="0" height="1233" src="https://klontiaonline.github.io/IBD-Event-Janssen-Newsletter/images/1_01.jpg" style="line-height:0; border:0; width:1024px; max-width:1024px; min-width:1024px; height:1233px; max-height:1233px; min-height:1233px;" width="1024">
                                                                 </td>
                                                             </tr>
                                                             <tr align="left" style="border-collapse: collapse;border-spacing: 0;border: 0; background-color:#fff;">
-                                                                <td align="left" valign="middle" style="width:1024px; height:1090px; background-color:#fff;">
-                                                                    <img style="background-color:#fff;" border="0" height="1090" src="images/1_02.jpg" style="line-height:0; border:0; width:1024px; max-width:1024px; min-width:1024px; height:1090px; max-height:1090px; min-height:1090px;" width="1024">
+                                                                <td align="left" valign="middle" style="width:1024px; height:1193px; background-color:#fff;">
+                                                                    <img style="background-color:#fff;" border="0" height="1193" src="https://klontiaonline.github.io/IBD-Event-Janssen-Newsletter/images/1_02.jpg" style="line-height:0; border:0; width:1024px; max-width:1024px; min-width:1024px; height:1193px; max-height:1193px; min-height:1193px;" width="1024">
                                                                 </td>
                                                             </tr>
                                                             <tr align="left" style="border-collapse: collapse;border-spacing: 0;border: 0; background-color:#fff;">
-                                                                <td align="left" valign="middle" style="width:1024px; height:785px; background-color:#fff;">
-                                                                    <img style="background-color:#fff;" border="0" height="785" src="images/1_03.jpg" style="line-height:0; border:0; width:1024px; max-width:1024px; min-width:1024px; height:785px; max-height:785px; min-height:785px;" width="1024">
+                                                                <td align="left" valign="middle" style="width:1024px; height:1051px; background-color:#fff;">
+                                                                    <img style="background-color:#fff;" border="0" height="1051" src="https://klontiaonline.github.io/IBD-Event-Janssen-Newsletter/images/1_03.jpg" style="line-height:0; border:0; width:1024px; max-width:1024px; min-width:1024px; height:1051px; max-height:1051px; min-height:1051px;" width="1024">
                                                                 </td>
                                                             </tr>
                                                             <tr align="left" style="border-collapse: collapse;border-spacing: 0;border: 0; background-color:#fff;">
-                                                                <td align="left" valign="middle" style="width:1024px; height:1430px; background-color:#fff;">
+                                                                <td align="left" valign="middle" style="width:1024px; height:1427px; background-color:#fff;">
                                                                     <a href="https://jnj-my.sharepoint.com/:v:/p/abesar_its/Ef7X9iF3TGpKtC0317tBMrIBCo27a0SpKIIqLsLxoidm4w?e=wHX5SC" target="_blank">
-                                                                        <img style="background-color:#fff;" border="0" height="1430" src="images/1_04.jpg" style="line-height:0; border:0; width:1024px; max-width:1024px; min-width:1024px; height:1430px; max-height:1430px; min-height:1430px;" width="1024">
+                                                                        <img style="background-color:#fff;" border="0" height="1427" src="https://klontiaonline.github.io/IBD-Event-Janssen-Newsletter/images/1_04.jpg" style="line-height:0; border:0; width:1024px; max-width:1024px; min-width:1024px; height:1427px; max-height:1427px; min-height:1427px;" width="1024">
                                                                     </a>
                                                                 </td>
                                                             </tr>
                                                             <tr align="left" style="border-collapse: collapse;border-spacing: 0;border: 0; background-color:#fff;">
-                                                                <td align="left" valign="middle" style="width:1024px; height:939px; background-color:#fff;">
-                                                                    <img style="background-color:#fff;" border="0" height="939" src="images/1_05.jpg" style="line-height:0; border:0; width:1024px; max-width:1024px; min-width:1024px; height:939px; max-height:939px; min-height:939px;" width="1024">
+                                                                <td align="left" valign="middle" style="width:1024px; height:1022px; background-color:#fff;">
+                                                                    <img style="background-color:#fff;" border="0" height="1022" src="https://klontiaonline.github.io/IBD-Event-Janssen-Newsletter/images/1_05.jpg" style="line-height:0; border:0; width:1024px; max-width:1024px; min-width:1024px; height:1022px; max-height:1022px; min-height:1022px;" width="1024">
                                                                 </td>
                                                             </tr>
                                                         </tbody>
